--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     --background-color: rgb(255, 255, 255);
     --text-color: rgb(12, 4, 20);
+    --footer-text-color: rgb(109, 109, 109);
     --inline-link-color: rgb(161, 6, 223);
     --card-color: rgb(228, 228, 228);
     --card-header-color: rgb(161, 6, 223);
@@ -21,6 +22,7 @@ body {
     body {
         --background-color: rgb(35, 39, 38);
         --text-color: rgb(255, 255, 255);
+        --footer-text-color: rgb(153, 153, 153);
         --inline-link-color: rgb(219, 129, 255);
         --card-color: rgb(12, 4, 20);
         --card-header-color: rgb(50, 0, 70);
@@ -47,7 +49,7 @@ body {
     margin-right: auto;
     padding-left: 2rem;
     padding-right: 2rem;
-    padding-bottom: 5rem;
+    padding-bottom: 0.3rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -71,7 +73,6 @@ h1, h2 {
     line-height: 1.5rem;
     margin-top: 1rem;
 }
-
 
 
 .header p a {
@@ -199,4 +200,42 @@ h1, h2 {
 
 .entry .link:hover {
     background-color: var(--card-hover-link-color);
+}
+
+.footer{
+    color: var(--footer-text-color);
+    text-align: center;
+    max-width: 50rem;
+    margin: auto;
+    font-size: medium;
+    margin-top: 5rem;
+}
+
+.footer a{
+    text-decoration: underline;
+    margin-left: 0.5rem;
+}
+
+.about p {
+    color: var(--text-color);
+    text-align: justify;
+    hyphens: auto;
+    max-width: 50rem;
+    margin: auto;
+    font-size: large;
+    line-height: 1.5rem;
+    margin-top: 1rem;
+}
+
+
+.about table {
+    margin: auto;
+}
+
+.about p a {
+    color: var(--inline-link-color);
+}
+
+.about p a:hover {
+    text-decoration: underline;
 }
