add link to datapack map wiki; add legal disclaimer

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,15 @@ h1, h2 {
     text-decoration: underline;
 }
 
+.disclaimer {
+    color: var(--footer-text-color);
+    text-align: center;
+    max-width: 70rem;
+    margin: auto;
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
+}
+
 .list {
     list-style: none;
     display: flex;
