--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,8 @@ h1, h2 {
     padding-left: 0;
     justify-content: center;
     align-items: flex-start;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
 .entry {
